--- a/CodeCameleon.EfCoreToolkit/CodeCameleon.EfCoreToolkit.csproj
+++ b/CodeCameleon.EfCoreToolkit/CodeCameleon.EfCoreToolkit.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <NoWarn>IDE0305</NoWarn>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
+  </ItemGroup>
 
 </Project>
