Updated the NuGet packages.

--- a/CodeCameleon.EfCoreToolkit.Tests/CodeCameleon.EfCoreToolkit.Tests.csproj
+++ b/CodeCameleon.EfCoreToolkit.Tests/CodeCameleon.EfCoreToolkit.Tests.csproj
@@ -6,10 +6,15 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="NUnit" />
     <PackageReference Include="NUnit.Analyzers" />
     <PackageReference Include="NUnit3TestAdapter" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CodeCameleon.EfCoreToolkit\CodeCameleon.EfCoreToolkit.csproj" />
   </ItemGroup>
 
 </Project>
